# Proyecto01_Vehiculo-control-remoto-con-sistema-embebido-via-servidor-web

./: README.md  front_end.jfif
Frontend/: package-lock.json
Frontend/src/: App.css  App.jsx  VideoStream.jsx  index.css
Raspberry/: wifi  wpa_supplicant.conf
Yocto/conf/: bblayers.conf  local.conf
Yocto/meta-customlayer/recipes-gpio/libgpio/: libgpio_1.0.bb
Yocto/meta-customlayer/recipes-server/servidor/: servidor_1.0.bb
Yocto/meta-customlayer/recipes-server/servidor/files/servidor-1.0/: Makefile.in  configure  configure.ac
Yocto/meta-customlayer/recipes-server/servidor/files/servidor-1.0/autom4te.cache/: output.1  requests  traces.0  traces.1
Yocto/meta-customlayer/recipes-server/servidor/files/servidor-1.0/src/: Makefile.am  Makefile.in  servidor.c
auth/: authentication.c  calcular_hash_admin.c
libgpio-1.0/: Makefile.in  configure  configure.ac
libgpio-1.0/include/: gpio.h  pwm.h
libgpio-1.0/lib/: Makefile.am  Makefile.in  gpio.c  pwm.c
libgpio-1.0/src/: Makefile.am  Makefile.in  main.c
tests/: gpio_test.c  pwm_test.c  test_car.c
