AC_INIT([libgpio], [1.0], [ricardobm@estudiantec.cr])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AM_PROG_AR

# Inicializa libtool
LT_INIT

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
	Makefile
	lib/Makefile
	src/Makefile
])
AC_OUTPUT
